test/libsolidity/syntaxTests/freeFunctions/free_virtual.sol
function fun() virtual {
}
// ----
// SyntaxError: (0-26): Free functions cannot be virtual.
